c4prj2_input/grade.txt
Grading at Thu Oct  3 02:51:12 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:24:5: error: implicit declaration of function ‘perror’ [-Werror=implicit-function-declaration]
     perror(" ERROR! there is no cards in the future deck \n");
     ^
future.c:29:26: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
       size_t range = ((fc->deck[i]).n_cards > deck->n_cards)? deck->n_cards: (fc->deck[i]).n_cards;
                          ^
future.c:29:81: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
       size_t range = ((fc->deck[i]).n_cards > deck->n_cards)? deck->n_cards: (fc->deck[i]).n_cards;
                                                                                 ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
